// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack-tests > 1. extracts to a div for simple views, flat transforms 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fg-1 _fs-1 _fb-0px _bxsh-0px0px10px0946673987 _fd-525695443 _bc-804859160 _tsx-1883057750 _s-1183657447 _tsy-2118506539 test1"
          rounded="100"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1686130279 _ox-2097820587 _oy-2000633204 who"
        />
        <div
          class="is_View _pt-2px _pb-2px _t--14px _fd-1686130279 _bc-10341746 ease-in-out-top"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 2. extracts className for complex views but keeps other props 2`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1686130279 _ox-2097820587 _oy-2000633204 who"
        />
        <div
          class="is_View _pt-2px _pb-2px _t-0px _fd-1686130279 _bc-10288124 ease-in-out-top"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 5. spread conditional 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1360800300 _ox-2097820587 _oy-2000633204 _bc-12224809"
        >
          <div
            class="is_View _fd-1360800300 _ox-2097820587 _oy-2000633204 _bc-12224809 hello-world"
          />
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1360800300 _ox-2097820587 _oy-2000633204 _bc-12224809"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 6. spread ternary 2`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1360800300 _ox-2097820587 _oy-2000633204 _bc-1524534687"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 7. ternary + data-is 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _pr-11px _pl-11px _pb-10px _fd-1360800300 _w-1488715325"
          maxw="30%"
          minw="500"
        >
          <div
            class="is_View _w-10px _h-10px _fd-1360800300"
          />
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 8. styleExpansions 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _t-0px _r-0px _b-0px _l-0px _fd-525695443 _p-1686201532"
        >
          <div
            class="is_View _fd-525695443 _bc-804859160"
          >
            <div
              class="is_View _t-0px _r-0px _b-0px _l-0px _fd-525695443 _p-1686201532 _bc-1404183362"
            />
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 9. combines with classname 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _pt-15px _pb-15px _fd-525695443 home-top-dish"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 10. extracts Text 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <span
          class="is_Text _fos-10px _c-930348155"
        >
          <span
            class="is_Text _c-930348155"
            select="auto"
          >
            <span
              class="is_Text _fos-15px _c-232473871 _fw-1787079307"
            >
              hello
            </span>
          </span>
        </span>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 12. ternary multiple on same key 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _o-1 _tr- _fd-1360800300"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 14. extracts pseudo styles and evaluates constants 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-525695443 _bc-518987389"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 15. extracts spacer (complex expansion) 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <span
          class="is_Spacer is_View _pe-836242017 _w-1822269961 _h-1340170027 _mw-339465280 _mh-971050720"
        />
        <span
          class="is_Spacer is_View _fg-1 _fs-1 _fb-0px _pe-836242017 _w-1918028207 _h-1604300643 _mw-777765528 _mh-1888728200"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 16. deopt when spreading multiple 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fg-1 _fs-1 _fb-0px _fd-1360800300 _bc-1524534687"
        />
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 18. extracts flexWrap property 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fw-474340940 _fd-1082030112 _rg-1906992756 _cg-159703721"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fw-807453939 _fd-1686130279"
          items="center"
          justify="space-between"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 19. extracts flexWrap with conditional 2`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fw-1800002994 _fd-1686130279"
          items="center"
          justify="space-between"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 20. extracts multiple flex properties together 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fg-1 _fs-0 _fd-525695443 _fw-474340940 _fb-625134996 _ai-825617931 _jc-1478849670 _ac-713818611"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _pt-4px _pb-4px _fd-1686130279 _fb-1934762382 _ox-2097820587 _oy-2000633204 _pl-182025707 _pr-1386582983 _w-1122939989 _c-553726572 _bc-329008467"
          maxw="100%"
          rounded="$0"
        >
          <div
            class="is_View _gap-0px _fd-1360800300 _fw-807453939"
            justify="flex-start"
          >
            <span
              class="is_Text _c-930348155"
            >
              hello world
            </span>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 21. complex real-world case - flexWrap with many conditionals and media queries 2`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _pt-4px _pb-4px _fd-1686130279 _fb-1933263923 _ox-2097820587 _oy-2000633204 _pl-182025707 _pr-1386582983 _w-1122939989 _c-553726572 _bc-329008467"
          maxw="100%"
          rounded="$0"
        >
          <div
            class="is_View _gap-0px _fd-1360800300 _fw-807453939"
            justify="center"
          >
            <span
              class="is_Text _c-930348155"
            >
              hello world
            </span>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 22. flexWrap with media query conditionals 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View _fd-1686130279 _rg-229758085 _cg-393713936 _fw-918911937 _pt-1831002991 _pr-1700477706 _pb-874247254 _pl-1389761532"
        >
          <span
            class="is_Text _c-930348155"
          >
            hello world
          </span>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`webpack-tests > 23. inert animatedBy selector flattens with group styles 1`] = `
<div>
  <span
    class="t_dark _dsp_contents"
  >
    <span
      class=" t_dark is_Theme"
      style="color: var(--color); display: contents;"
    >
      <span
        class="_dsp_contents  font_body"
      >
        <div
          class="is_View t_group_animated _fd-525695443"
          data-testid="animated-group"
        >
          <div
            class="is_View _w-100px _fd-525695443 _bc-645827489"
            data-testid="animated-group-child"
          />
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</div>
`;
